force-app/main/default/objects/Engagement__c/fields/Consent_Form_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Consent_Form_Submitted__c</fullName>
    <label>Consent Form Submitted</label>
    <type>Date</type>
</CustomField>