force-app/main/default/objects/Engagement__c/fields/ConsentExpiryToday__c.field-meta.xml
<CustomField>
    <fullName>ConsentExpiryToday__c</fullName>
    <formula>ParentGuardianConsentExpiry__c =TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consent Expiry Today?</label>
    <type>Checkbox</type>
</CustomField>