force-app/main/default/objects/Engagement__c/fields/ConsentFormSent__c.field-meta.xml
<CustomField>
    <fullName>ConsentFormSent__c</fullName>
    <label>Consent Form Sent</label>
    <type>Date</type>
</CustomField>