force-app/main/default/objects/Engagement__c/fields/ConsentFormUniqueLink__c.field-meta.xml
<CustomField>
    <fullName>ConsentFormUniqueLink__c</fullName>
    <formula>HYPERLINK(&apos;https://www.tfaforms.com/4920657?tfa_16=&apos;&amp;Id&amp;&apos;&amp;tfa_3=&apos;&amp; YPFullName__c ,&apos;click here&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consent Form Unique Link</label>
    <type>Text</type>
</CustomField>