force-app/main/default/objects/Engagement__c/fields/ConsentRecipientEmail__c.field-meta.xml
<CustomField>
    <fullName>ConsentRecipientEmail__c</fullName>
    <label>Consent Recipient Email</label>
    <type>Email</type>
</CustomField>