force-app/main/default/objects/Engagement__c/fields/ConsentResponse__c.field-meta.xml
<CustomField>
    <fullName>ConsentResponse__c</fullName>
    <label>Consent Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consent Confirmed</fullName>
            </value>
            <value>
                <fullName>Requested Further Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>