force-app/main/default/objects/Engagement__c/fields/EngagementEndDate__c.field-meta.xml
<CustomField>
    <fullName>EngagementEndDate__c</fullName>
    <inlineHelpText>The date on which the young person ended their engagement with the particular service</inlineHelpText>
    <label>Engagement End Date</label>
    <type>Date</type>
</CustomField>