force-app/main/default/objects/Engagement__c/fields/EngagementStartDate__c.field-meta.xml
<CustomField>
    <fullName>EngagementStartDate__c</fullName>
    <inlineHelpText>The date on which the young person is due to begin accessing the service</inlineHelpText>
    <label>Engagement Start Date</label>
    <type>Date</type>
</CustomField>