force-app/main/default/objects/Engagement__c/fields/EngagementType__c.field-meta.xml
<CustomField>
    <fullName>EngagementType__c</fullName>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Girls&apos; Group</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>One-to-One</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>