force-app/main/default/objects/Engagement__c/fields/MostRecentAttendance__c.field-meta.xml
<CustomField>
    <fullName>MostRecentAttendance__c</fullName>
    <inlineHelpText>Automatically summarises the latest attendance date</inlineHelpText>
    <label>Most Recent Attendance</label>
    <summarizedField>Attendance__c.AttendanceDate__c</summarizedField>
    <summaryFilterItems>
        <field>Attendance__c.Status__c</field>
        <operation>equals</operation>
        <value>Attended</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendance__c.Engagement__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>