force-app/main/default/objects/Engagement__c/fields/Online_Session_Consent__c.field-meta.xml
<CustomField>
    <fullName>Online_Session_Consent__c</fullName>
    <label>Online Session Consent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>