force-app/main/default/objects/Engagement__c/fields/Online_Session_Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>Online_Session_Consent_Date__c</fullName>
    <label>Online Session Consent Date</label>
    <type>Date</type>
</CustomField>