force-app/main/default/objects/Engagement__c/fields/Parent1Details__c.field-meta.xml
<CustomField>
    <fullName>Parent1Details__c</fullName>
    <formula>IF( Contact__r.ParentGuardianEmail__c &lt;&gt;&quot;&quot;,TRUE,FALSE)</formula>
    <label>PG 1 Has Email</label>
    <type>Checkbox</type>
</CustomField>