force-app/main/default/objects/Engagement__c/fields/ParentGuardianConsent__c.field-meta.xml
<CustomField>
    <fullName>ParentGuardianConsent__c</fullName>
    <inlineHelpText>The date on which the Parent/Guardian of YP gave their consent for this Service</inlineHelpText>
    <label>Parent/Guardian Consent</label>
    <type>Date</type>
</CustomField>