force-app/main/default/objects/Engagement__c/fields/ParentGuardianConsentCurrent__c.field-meta.xml
<CustomField>
    <fullName>ParentGuardianConsentCurrent__c</fullName>
    <formula>IF(ISBLANK(ParentGuardianConsentExpiry__c),false,ParentGuardianConsentExpiry__c &gt; TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Guardian Consent Current</label>
    <type>Checkbox</type>
</CustomField>