force-app/main/default/objects/Engagement__c/fields/ParentGuardianConsentExpiry__c.field-meta.xml
<CustomField>
    <fullName>ParentGuardianConsentExpiry__c</fullName>
    <formula>DATE(
YEAR(ParentGuardianConsent__c)+2,
MONTH(ParentGuardianConsent__c),
DAY(ParentGuardianConsent__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent/Guardian Consent Expiry</label>
    <type>Date</type>
</CustomField>