force-app/main/default/objects/Engagement__c/fields/PG2HasEmail__c.field-meta.xml
<CustomField>
    <fullName>PG2HasEmail__c</fullName>
    <formula>IF(  Contact__r.Parent_Guardian_2_Email__c &lt;&gt;&quot;&quot;,TRUE,FALSE)</formula>
    <label>PG 2 Has Email</label>
    <type>Checkbox</type>
</CustomField>