force-app/main/default/objects/Engagement__c/fields/PhotoConsentDate__c.field-meta.xml
<CustomField>
    <fullName>PhotoConsentDate__c</fullName>
    <inlineHelpText>The date on which photo sense was given</inlineHelpText>
    <label>Photo Consent Date</label>
    <type>Date</type>
</CustomField>