force-app/main/default/objects/Engagement__c/fields/SendConsentForm__c.field-meta.xml
<CustomField>
    <fullName>SendConsentForm__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Triggers the send of the Consent form to the specified individual if they have an email address recorded</inlineHelpText>
    <label>Send Consent Form</label>
    <type>Checkbox</type>
</CustomField>