force-app/main/default/objects/Engagement__c/fields/SendConsentFormTo__c.field-meta.xml
<CustomField>
    <fullName>SendConsentFormTo__c</fullName>
    <label>Send Consent Form To:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent/Guardian 1</fullName>
            </value>
            <value>
                <fullName>Parent/Guardian 2</fullName>
            </value>
            <value>
                <fullName>Young Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>