force-app/main/default/objects/Engagement__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Engagement</relationshipLabel>
    <relationshipName>Engagement</relationshipName>
    <type>Lookup</type>
</CustomField>