force-app/main/default/objects/Engagement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Consent</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Withdrawn/Left</fullName>
            </value>
            <value>
                <fullName>Concluded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>