force-app/main/default/objects/Engagement__c/fields/TotalAttendances__c.field-meta.xml
<CustomField>
    <fullName>TotalAttendances__c</fullName>
    <inlineHelpText>Summarises the total number of Attendances where Status = &apos;Attended&apos;</inlineHelpText>
    <label>Total Attendances</label>
    <summaryFilterItems>
        <field>Attendance__c.Status__c</field>
        <operation>equals</operation>
        <value>Attended</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendance__c.Engagement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>