force-app/main/default/objects/Engagement__c/fields/YPFullName__c.field-meta.xml
<CustomField>
    <fullName>YPFullName__c</fullName>
    <formula>Contact__r.FirstName &amp; &quot; &quot;&amp; Contact__r.LastName</formula>
    <label>YP Full Name</label>
    <type>Text</type>
</CustomField>