force-app/main/default/objects/Engagement__c/fields/YPHasEmail__c.field-meta.xml
<CustomField>
    <fullName>YPHasEmail__c</fullName>
    <formula>IF(  Contact__r.Email  &lt;&gt;&quot;&quot;,TRUE,FALSE)</formula>
    <label>YP Has Email</label>
    <type>Checkbox</type>
</CustomField>