force-app/main/default/objects/Engagement__c/validationRules/Email_must_populate_before_send.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_must_populate_before_send</fullName>
    <active>true</active>
    <errorConditionFormula>AND( SendConsentForm__c = TRUE, ISBLANK(ConsentRecipientEmail__c))</errorConditionFormula>
    <errorMessage>Please select a relevant recipient from the &apos;Send Consent Form To&apos; drop-down and then
wait for the &apos;Consent Recipient Email&apos; field to populate before ticking the &apos;send consent&apos; checkbox.</errorMessage>
</ValidationRule>