force-app/main/default/objects/Engagement__c/listViews/Engagements_Declined_Consent.listView-meta.xml
<ListView>
    <fullName>Engagements_Declined_Consent</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>EngagementType__c</columns>
    <columns>Status__c</columns>
    <columns>Service__c</columns>
    <columns>SendConsentFormTo__c</columns>
    <columns>ConsentResponse__c</columns>
    <columns>Consent_Form_Submitted__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ConsentResponse__c</field>
        <operation>equals</operation>
        <value>Requested Further Information</value>
    </filters>
    <label>Engagements Declined Consent</label>
</ListView>