force-app/main/default/objects/Engagement__c/listViews/Engagements_Recently_Approved_Consent.listView-meta.xml
<ListView>
    <fullName>Engagements_Recently_Approved_Consent</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>EngagementType__c</columns>
    <columns>Status__c</columns>
    <columns>Service__c</columns>
    <columns>SendConsentFormTo__c</columns>
    <columns>ConsentResponse__c</columns>
    <columns>Consent_Form_Submitted__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ConsentResponse__c</field>
        <operation>equals</operation>
        <value>Consent Confirmed</value>
    </filters>
    <filters>
        <field>Consent_Form_Submitted__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:14</value>
    </filters>
    <label>Engagements Recently Approved Consent</label>
</ListView>