force-app/main/default/objects/Engagement__c/listViews/Group_Engagements.listView-meta.xml
<ListView>
    <fullName>Group_Engagements</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>EngagementType__c</columns>
    <columns>Status__c</columns>
    <columns>Service__c</columns>
    <columns>EngagementStartDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EngagementType__c</field>
        <operation>equals</operation>
        <value>Love4Life Group</value>
    </filters>
    <label>Group Engagements</label>
</ListView>