force-app/main/default/objects/Engagement__c/listViews/X121_Engagements.listView-meta.xml
<ListView>
    <fullName>X121_Engagements</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EngagementType__c</field>
        <operation>equals</operation>
        <value>121</value>
    </filters>
    <label>121 Engagements</label>
</ListView>